Grafana-Dashboard/deployment.yaml
# You will need to have the images built locally and pushed to the kavanetes registry
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavanet-grafana
  namespace: kavanet-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kavanet-grafana
  template:
    metadata:
      labels:
        app: kavanet-grafana
        # something: name
    spec:
      containers:
        - name: kavanet-grafana
          image: localhost:5000/create-react-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: kavanet-grafana-entry-point
  namespace: kavanet-grafana
spec:
  type: NodePort
  selector:
    app: kavanet-grafana
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 31001
